# logic_is_blind

./: .gitignore  .restart_app.sh  Procfile  README.md  app.py  config.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  server.js  sudoku.db  wsgi.py
app/: __init__.py
app/api/serializers/: puzzle_list.py
app/api/session/: token_check.py
app/api/solve/: get_cells.py  get_solution.py  set_digit.py
app/frontend/: package.json
app/models/: puzzles.py  session.py  solve.py  standard.py  urls.py
app/models/serializers/: pop_up.py  puzzle_list.py
app/services/collect_sudoku/: __init__.py  collect_sudoku.py
app/services/scraper/: __init__.py  logic_master_scraper.py  scraper.py  sudokupad_scraper.py  urls_scraper.py
app/services/scrapper/: scrapper.py
app/static/css/: style.css
app/sudoku_preview/: routes.py
app/templates/: index.html  sudoku_preview.html
app/views/index/: index.py
app/views/sudoku_preview/: sudoku_preview.py
frontend/: Procfile  package-lock.json  package.json  static.json  tailwind.config.js
frontend/src/: App.jsx  fetchData.js  index.css
frontend/src/hooks/: FilterContext.js  PreviewContext.js  TakenCellsContext.js
frontend/src/pages/: Home.jsx  NotFound.jsx  Preview.jsx  Settings.jsx  Solution.jsx  Solve.jsx
instance/: sudoku.db
migrations/versions/: 2c0b9512e1e6_removing_unique_constraint.py  76d78c257363_adding_size.py  81fcef787617_.py  b798904b7d59_initial_migration.py  e50fea6560d6_adding_title.py  f3151fe4ef92_again.py
templates/: index.html  show_image.html
(+33 files in other folders)
