[tool.poetry]
name = "logic-is-blind"
version = "0.1.0"
description = ""
authors = ["LeweLotki <stefanczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
flask-sqlalchemy = "^3.1.1"
selenium = "^4.19.0"
webdriver-manager = "^4.0.1"
click = "^8.1.7"
gunicorn = "^22.0.0"
flask-migrate = "^4.0.7"
flask-cors = "^4.0.0"
flask-session = "^0.8.0"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
